--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
     "sanitize-html": "^2.13.0",
     "tailwind-variants": "^0.2.1",
