feat: develop dates contexts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,9 @@
       "@/constants/*": [
         "constants/*"
       ],
+      "@/context/*": [
+        "context/*"
+      ],
       "@/hooks/*": [
         "Hooks/*"
       ],
